# lambda-aws

./: .ex-env  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  main.py  pyproject.toml  zappa_settings.json
.github/workflows/: create_feature_pull_request.yml  develop_branch_automation.yml  production_deploy_automation.yml  test_and_deploy.yml
de_project/: apis.py  crypto_call.py  ingestor.py  lambda_function.py  s3_call.py  writers.py
src/: crypto_call.py  writers.py
tests/: test_apis.py  test_crypto_call.py  test_ingestor.py  test_writers.py
